Now count for fisher

--- a/src/work-hsa-listofcompounds.ipynb
+++ b/src/work-hsa-listofcompounds.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "fa19c64c",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1b4206df",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "448a033d",
    "metadata": {},
    "outputs": [],
@@ -336,31 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "7fd75bda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tA = read_compound_csv(\"/Users/boldi/Desktop/listA-complete.csv\")\n",
-    "tB = read_compound_csv(\"/Users/boldi/Desktop/listB-complete.csv\")\n",
-    "\n",
-    "valA = \"#FF0000\"\n",
-    "valB = \"#0000FF\"\n",
-    "\n",
-    "compound2color = {}\n",
-    "for x in tA:\n",
-    "    compound2color[x[0]] = valA\n",
-    "for x in tB:\n",
-    "    compound2color[x[0]] = valB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "id": "88d1a057",
    "metadata": {},
    "outputs": [],
    "source": [
+    "valA = \"#FF0000\"\n",
+    "valB = \"#0000FF\"\n",
+    "\n",
     "def writeKEGGpdfcolors(outputDirectory, organism, superpathway, superpathwayDict, compound2color):\n",
     "    \"\"\"\n",
     "    \"\"\"\n",
@@ -416,12 +399,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "7fd75bda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tA = read_compound_csv(\"/Users/boldi/Desktop/listA-complete.csv\")\n",
+    "tB = read_compound_csv(\"/Users/boldi/Desktop/listB-complete.csv\")\n",
+    "\n",
+    "compound2color = {}\n",
+    "for x in tA:\n",
+    "    compound2color[x[0]] = valA\n",
+    "for x in tB:\n",
+    "    compound2color[x[0]] = valB"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "id": "b9885cb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for organism in organismDict.keys():\n",
+    "### PRODUCE all KEGG pdfs and index.html\n",
+    "\n",
+    "for organism in []: organismDict.keys():\n",
     "    superIndex = []\n",
     "    for superpathway in superpathwayDict.keys():\n",
     "        safeSuperpathway = makesafe(superpathway)\n",
@@ -439,8 +441,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "add37631",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PRODUCE a dictionary compounds with the set of compounds appearing in the whole organism, in each\n",
+    "### superpathway and in each pathway\n",
+    "compounds = {}\n",
+    "for organism in organismDict.keys():\n",
+    "    compounds[organism] = set([])\n",
+    "    for superpathway in superpathwayDict.keys():\n",
+    "        compounds[superpathway] = set([])\n",
+    "        for pw in superpathwayDict[superpathway]:\n",
+    "            pathway = read(open(os.path.join(dataDirectory, organism, f\"{organism}{pw[0]}.xml\"), \"r\"))\n",
+    "            compounds[pw[0]] = set([x.name[4:] for x in pathway.compounds])\n",
+    "            compounds[superpathway] |= compounds[pw[0]]\n",
+    "            compounds[organism] |= compounds[pw[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "7483c7c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hsa,3023,58,15\n",
+      "Carbohydrate metabolism,503,21,6\n",
+      "00010,31,3,0\n",
+      "00020,20,0,0\n",
+      "00030,36,5,0\n",
+      "00040,58,4,2\n",
+      "00051,54,2,0\n",
+      "00052,46,1,0\n",
+      "00053,57,1,1\n",
+      "00500,37,0,2\n",
+      "00520,118,4,1\n",
+      "00620,32,1,0\n",
+      "00630,64,3,1\n",
+      "00640,41,3,1\n",
+      "00650,47,4,1\n",
+      "00562,47,2,0\n",
+      "Energy metabolism,67,5,3\n",
+      "00190,16,1,3\n",
+      "00910,19,2,0\n",
+      "00920,33,2,0\n",
+      "Lipid metabolism,659,8,2\n",
+      "00061,58,1,0\n",
+      "00062,40,0,0\n",
+      "00071,50,1,0\n",
+      "00100,57,1,0\n",
+      "00120,48,1,0\n",
+      "00140,99,0,0\n",
+      "00561,38,2,2\n",
+      "00564,56,3,2\n",
+      "00565,25,0,0\n",
+      "00600,27,0,0\n",
+      "00590,79,0,0\n",
+      "00591,28,0,0\n",
+      "00592,44,0,0\n",
+      "01040,74,0,0\n",
+      "Nucleotide metabolism,159,9,2\n",
+      "00230,101,5,1\n",
+      "00240,64,4,1\n",
+      "Amino acid metabolism,550,17,3\n",
+      "00250,28,0,1\n",
+      "00260,48,3,0\n",
+      "00270,66,4,0\n",
+      "00280,41,4,1\n",
+      "00290,23,2,0\n",
+      "00310,51,2,0\n",
+      "00220,23,1,0\n",
+      "00330,69,3,2\n",
+      "00340,47,1,0\n",
+      "00350,78,1,0\n",
+      "00360,49,1,0\n",
+      "00380,83,0,0\n",
+      "00400,34,1,0\n",
+      "Metabolism of other amino acids,220,8,2\n",
+      "00410,32,1,2\n",
+      "00430,24,0,0\n",
+      "00440,53,1,0\n",
+      "00450,27,2,0\n",
+      "00470,69,3,0\n",
+      "00480,38,4,1\n",
+      "Glycan biosynthesis and metabolism,270,2,0\n",
+      "00510,38,0,0\n",
+      "00513,31,0,0\n",
+      "00512,17,0,0\n",
+      "00515,27,0,0\n",
+      "00514,0,0,0\n",
+      "00532,12,1,0\n",
+      "00534,11,1,0\n",
+      "00533,0,0,0\n",
+      "00531,27,0,0\n",
+      "00563,19,1,0\n",
+      "00601,54,0,0\n",
+      "00603,23,0,0\n",
+      "00604,31,0,0\n",
+      "00511,0,0,0\n",
+      "Metabolism of cofactors and vitamins,497,12,4\n",
+      "00730,31,0,1\n",
+      "00740,24,2,1\n",
+      "00750,29,1,0\n",
+      "00760,55,2,1\n",
+      "00770,30,1,0\n",
+      "00780,29,1,0\n",
+      "00785,13,0,0\n",
+      "00790,58,1,0\n",
+      "00670,9,0,0\n",
+      "00830,24,0,0\n",
+      "00860,144,3,0\n",
+      "00130,71,1,1\n",
+      "Metabolism of terpenoids and polyketides,46,2,0\n",
+      "00900,46,2,0\n",
+      "Biosynthesis of other secondary metabolites,103,1,0\n",
+      "00232,22,0,0\n",
+      "00524,81,1,0\n",
+      "Xenobiotics biodegradation and metabolism,260,0,0\n",
+      "00980,121,0,0\n",
+      "00982,87,0,0\n",
+      "00983,52,0,0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def printLine(key, compoundDict, listsOfInterest):\n",
+    "    \"\"\"\n",
+    "        Interrogate compoundDict with key, and obtain a set.\n",
+    "        Print the key, the size of the set, and for each of the (key,value) pairs in the\n",
+    "        dictionary, the size of the intersection between the set and the value\n",
+    "    \"\"\"\n",
+    "    whole = compoundDict[key]\n",
+    "    nwhole = len(whole)\n",
+    "    intersections = \",\".join([str(len(whole & value)) for key, value in listsOfInterest.items()])\n",
+    "    print(f\"{key},{nwhole},{intersections}\")\n",
+    "            \n",
+    "tA = read_compound_csv(\"/Users/boldi/Desktop/listA-complete.csv\")\n",
+    "tB = read_compound_csv(\"/Users/boldi/Desktop/listB-complete.csv\")\n",
+    "setA = set([x[0] for x in tA])\n",
+    "setB = set([x[0] for x in tB])\n",
+    "\n",
+    "\n",
+    "        \n",
+    "for organism in organismDict.keys():\n",
+    "    printLine(organism, compounds, {'A': setA, 'B': setB})\n",
+    "    for superpathway in superpathwayDict.keys():\n",
+    "        printLine(superpathway, compounds, {'A': setA, 'B': setB})\n",
+    "        for pw in superpathwayDict[superpathway]:\n",
+    "            printLine(pw[0], compounds, {'A': setA, 'B': setB})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "856f7e0f",
    "metadata": {},
    "outputs": [],
    "source": []
