--- a/src/work-hsa-listofcompounds.ipynb
+++ b/src/work-hsa-listofcompounds.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "8fcb987c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,8 @@
     "from Levenshtein import ratio\n",
     "from chemspipy import ChemSpider\n",
     "import logging\n",
-    "import pathlib"
+    "import pathlib\n",
+    "from Bio.KEGG.KGML.KGML_parser import read"
    ]
   },
   {
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "1b4206df",
    "metadata": {},
    "outputs": [],
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1fa56a6a",
    "metadata": {},
    "outputs": [],
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "597655a1",
    "metadata": {},
    "outputs": [],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "84c62e0c",
    "metadata": {},
    "outputs": [],
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2ed76756",
    "metadata": {},
    "outputs": [],
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "8bfade83",
    "metadata": {},
    "outputs": [],
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "448a033d",
    "metadata": {},
    "outputs": [],
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "88d1a057",
    "metadata": {},
    "outputs": [],
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "ae27a306",
    "metadata": {},
    "outputs": [],
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7fd75bda",
    "metadata": {},
    "outputs": [],
@@ -416,14 +417,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "b9885cb5",
    "metadata": {},
    "outputs": [],
    "source": [
     "### PRODUCE all KEGG pdfs and index.html\n",
     "\n",
-    "for organism in []: organismDict.keys():\n",
+    "for organism in []: #organismDict.keys():\n",
     "    superIndex = []\n",
     "    for superpathway in superpathwayDict.keys():\n",
     "        safeSuperpathway = makesafe(superpathway)\n",
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "add37631",
    "metadata": {},
    "outputs": [],
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "id": "7483c7c0",
    "metadata": {},
    "outputs": [
@@ -599,8 +600,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "856f7e0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9d47f255",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML(\"../../LaTeX/Data/KEGG-Pathways/hsa/hsa00040-sbml.xml\")\n",
+    "G, dd = hg2g(H)\n",
+    "cc = nx.closeness_centrality(G)\n",
+    "\n",
+    "ccA = []\n",
+    "for x in setA:\n",
+    "    for node in H.nodes():\n",
+    "        if str(node)==x:\n",
+    "            ccA += [cc[x]]\n",
+    "\n",
+    "ccB = []\n",
+    "for x in setB:\n",
+    "    for node in H.nodes():\n",
+    "        if str(node)==x:\n",
+    "            ccB += [cc[x]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "26a53e63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.0878048780487805], [0.0821566110397946])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ccA, ccB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8494df7",
    "metadata": {},
    "outputs": [],
    "source": []
