--- a/src/work-hsa-listofcompounds.ipynb
+++ b/src/work-hsa-listofcompounds.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8fcb987c",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "fa19c64c",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "35f00122",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "1b4206df",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1fa56a6a",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "597655a1",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "84c62e0c",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "2ed76756",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "8bfade83",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "id": "448a033d",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "88d1a057",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "ae27a306",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "id": "7fd75bda",
    "metadata": {},
    "outputs": [],
@@ -422,14 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "id": "b9885cb5",
    "metadata": {},
    "outputs": [],
    "source": [
     "### PRODUCE all KEGG pdfs and index.html\n",
     "\n",
-    "for organism in organismDict.keys():\n",
+    "for organism in []:#organismDict.keys():\n",
     "    superIndex = []\n",
     "    for superpathway in superpathwayDict.keys():\n",
     "        safeSuperpathway = makesafe(superpathway)\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "id": "add37631",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "id": "7483c7c0",
    "metadata": {},
    "outputs": [
@@ -609,6 +609,99 @@
    "id": "142580e7",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "read_hg_from_SBML()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "747bdeec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([os.path.join(dataDirectory, organism, organism + pw[0] + \"-sbml.xml\") for spw in superpathwayDict.values() for pw in spw])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "8407c893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G, dd = hg2g(H)\n",
+    "G = nx.DiGraph(G)\n",
+    "nodes = [x for x in list(G.nodes()) if x.startswith('C')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "32271665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "centralities = {\n",
+    "    \"closeness\": nx.closeness_centrality,\n",
+    "    \"eigenvector\": nx.eigenvector_centrality,\n",
+    "    \"katz\": nx.katz_centrality,\n",
+    "    \"betweenness\": nx.betweenness_centrality,\n",
+    "    \"harmonic\": nx.harmonic_centrality\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "ad4f94a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "closeness \tA:  0.01212 (161.53%)\tB:  0.01102 (146.88%)\t 0.00750\n",
+      "eigenvector\tA:  0.00885 (506.46%)\tB:  0.00001 (0.40%)\t 0.00175\n",
+      "katz      \tA:  0.01822 (108.34%)\tB:  0.01804 (107.29%)\t 0.01682\n",
+      "betweenness\tA:  0.00485 (233.26%)\tB:  0.00439 (211.14%)\t 0.00208\n",
+      "harmonic  \tA: 58.38375 (166.74%)\tB: 52.76201 (150.69%)\t35.01404\n"
+     ]
+    }
+   ],
+   "source": [
+    "for centrality_name, centrality_function in centralities.items():\n",
+    "    centrality = centrality_function(G)\n",
+    "    avA = np.average([centrality[x] for x in setA if x in closeness])\n",
+    "    avB = np.average([centrality[x] for x in setB if x in closeness])\n",
+    "    avRandom = np.average([centrality[x] for x in list(np.random.choice(nodes, 300000)) if x in closeness])\n",
+    "    print(f\"{centrality_name:10}\\tA: {avA:8.5f} ({100*avA/avRandom:.2f}%)\\tB: {avB:8.5f} ({100*avB/avRandom:.2f}%)\\t{avRandom:8.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "754a02b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "0e11a590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avRandom = np.average([closeness[x] for x in list(np.random.choice(nodes, 300000)) if x in closeness])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40cf4455",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -628,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
