--- a/src/work-hsa-listofcompounds.ipynb
+++ b/src/work-hsa-listofcompounds.ipynb
@@ -605,27 +605,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "142580e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_hg_from_SBML()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "747bdeec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/boldi/.local/share/virtualenvs/qf-ZyPGaJ2v/lib/python3.9/site-packages/hypernetx/classes/hypergraph.py:968: UserWarning: Cannot add edge. Edge already in hypergraph\n",
+      "  warnings.warn(\"Cannot add edge. Edge already in hypergraph\")\n"
+     ]
+    }
+   ],
    "source": [
     "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([os.path.join(dataDirectory, organism, organism + pw[0] + \"-sbml.xml\") for spw in superpathwayDict.values() for pw in spw])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "id": "8407c893",
    "metadata": {},
    "outputs": [],
@@ -637,14 +636,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "id": "32271665",
    "metadata": {},
    "outputs": [],
    "source": [
     "centralities = {\n",
     "    \"closeness\": nx.closeness_centrality,\n",
-    "    \"eigenvector\": nx.eigenvector_centrality,\n",
     "    \"katz\": nx.katz_centrality,\n",
     "    \"betweenness\": nx.betweenness_centrality,\n",
     "    \"harmonic\": nx.harmonic_centrality\n",
@@ -653,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "id": "ad4f94a1",
    "metadata": {},
    "outputs": [
@@ -661,48 +659,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "closeness \tA:  0.01212 (161.53%)\tB:  0.01102 (146.88%)\t 0.00750\n",
-      "eigenvector\tA:  0.00885 (506.46%)\tB:  0.00001 (0.40%)\t 0.00175\n",
-      "katz      \tA:  0.01822 (108.34%)\tB:  0.01804 (107.29%)\t 0.01682\n",
-      "betweenness\tA:  0.00485 (233.26%)\tB:  0.00439 (211.14%)\t 0.00208\n",
-      "harmonic  \tA: 58.38375 (166.74%)\tB: 52.76201 (150.69%)\t35.01404\n"
+      "closeness \tA:  0.01212 (159.42%)\tB:  0.01102 (145.75%)\n",
+      "katz      \tA:  0.01822 (108.33%)\tB:  0.01804 (107.22%)\n",
+      "betweenness\tA:  0.00485 (241.53%)\tB:  0.00439 (212.12%)\n",
+      "harmonic  \tA: 58.38375 (167.89%)\tB: 52.76201 (152.27%)\n"
      ]
     }
    ],
    "source": [
     "for centrality_name, centrality_function in centralities.items():\n",
     "    centrality = centrality_function(G)\n",
-    "    avA = np.average([centrality[x] for x in setA if x in closeness])\n",
-    "    avB = np.average([centrality[x] for x in setB if x in closeness])\n",
-    "    avRandom = np.average([centrality[x] for x in list(np.random.choice(nodes, 300000)) if x in closeness])\n",
-    "    print(f\"{centrality_name:10}\\tA: {avA:8.5f} ({100*avA/avRandom:.2f}%)\\tB: {avB:8.5f} ({100*avB/avRandom:.2f}%)\\t{avRandom:8.5f}\")"
+    "    valsA = [centrality[x] for x in setA if x in centrality]\n",
+    "    nA = len(valsA)\n",
+    "    avA = np.average(valsA)\n",
+    "    valsB = [centrality[x] for x in setB if x in centrality]\n",
+    "    nB = len(valsB)\n",
+    "    avB = np.average(valsB)\n",
+    "    avRandA = np.average([np.average([centrality[x] for x in np.random.choice(nodes, nA, replace=False)]) for i in range(1000)])\n",
+    "    avRandB = np.average([np.average([centrality[x] for x in np.random.choice(nodes, nB, replace=False)]) for i in range(1000)])\n",
+    "    print(f\"{centrality_name:10}\\tA: {avA:8.5f} ({100*avA/avRandA:.2f}%)\\tB: {avB:8.5f} ({100*avB/avRandB:.2f}%)\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "754a02b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "0e11a590",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avRandom = np.average([closeness[x] for x in list(np.random.choice(nodes, 300000)) if x in closeness])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40cf4455",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
