--- a/src/work-hsa-listofcompounds.ipynb
+++ b/src/work-hsa-listofcompounds.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "8fcb987c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,8 @@
     "from chemspipy import ChemSpider\n",
     "import logging\n",
     "import pathlib\n",
-    "from Bio.KEGG.KGML.KGML_parser import read"
+    "from Bio.KEGG.KGML.KGML_parser import read\n",
+    "import scipy"
    ]
   },
   {
@@ -605,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "747bdeec",
    "metadata": {},
    "outputs": [
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "8407c893",
    "metadata": {},
    "outputs": [],
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "32271665",
    "metadata": {},
    "outputs": [],
@@ -651,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "ad4f94a1",
    "metadata": {},
    "outputs": [
@@ -659,10 +660,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "closeness \tA:  0.01212 (159.42%)\tB:  0.01102 (145.75%)\n",
-      "katz      \tA:  0.01822 (108.33%)\tB:  0.01804 (107.22%)\n",
-      "betweenness\tA:  0.00485 (241.53%)\tB:  0.00439 (212.12%)\n",
-      "harmonic  \tA: 58.38375 (167.89%)\tB: 52.76201 (152.27%)\n"
+      "closeness \tA:  0.01212 (161.06%)\tB:  0.01102 (147.70%)\n",
+      "katz      \tA:  0.01822 (108.28%)\tB:  0.01804 (107.05%)\n",
+      "betweenness\tA:  0.00485 (235.80%)\tB:  0.00439 (219.99%)\n",
+      "harmonic  \tA: 58.38375 (167.68%)\tB: 52.76201 (154.30%)\n"
      ]
     }
    ],
@@ -679,6 +680,43 @@
     "    avRandB = np.average([np.average([centrality[x] for x in np.random.choice(nodes, nB, replace=False)]) for i in range(1000)])\n",
     "    print(f\"{centrality_name:10}\\tA: {avA:8.5f} ({100*avA/avRandA:.2f}%)\\tB: {avB:8.5f} ({100*avB/avRandB:.2f}%)\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "50f93fb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "closeness \tA: p-value=   0.0014769179, sign=1\t\tB: p-value=     0.20202631, sign=1\t\t\n",
+      "katz      \tA: p-value=  6.6143943e-05, sign=1\t\tB: p-value=    0.025797127, sign=1\t\t\n",
+      "betweenness\tA: p-value=   0.0030748883, sign=1\t\tB: p-value=    0.045849783, sign=1\t\t\n",
+      "harmonic  \tA: p-value=   0.0016366921, sign=1\t\tB: p-value=     0.18819796, sign=1\t\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "for centrality_name, centrality_function in centralities.items():\n",
+    "    centrality = centrality_function(G)\n",
+    "    population = [centrality[x] for x in nodes]\n",
+    "    print(f\"{centrality_name:10}\\t\", end=\"\")\n",
+    "    for label_name, label_set in {\"A\": setA, \"B\": setB}.items():\n",
+    "        subpopulation = [centrality[x] for x in label_set if x in centrality]\n",
+    "        ks_result = scipy.stats.ks_2samp(population, subpopulation, alternative=\"greater\")\n",
+    "        print(f\"{label_name}: p-value={ks_result.pvalue:15.8}, sign={ks_result.statistic_sign}\\t\\t\", end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cac1df89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
