--- a/src/work-dereg.ipynb
+++ b/src/work-dereg.ipynb
@@ -2,119 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d4364c55",
    "metadata": {},
    "outputs": [],
    "source": [
     "from hypergraphs import *\n",
-    "from kegg import *"
+    "from kegg import *\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fa19c64c",
+   "execution_count": 77,
+   "id": "1146bfd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup \n",
-    "import pandas as pd"
+    "deregulationDir=\"../../LaTeX/Data/KEGG-Pathways/AgeDeregulation/Glycol_First_Try/\"\n",
+    "dataDirectory = \"../../LaTeX/Data/KEGG-Pathways/\"\n",
+    "\n",
+    "organismDict = {\"mmu\": \"Mus musculus (house mouse)\", \"dre\": \"Danio rerio (zebrafish)\", \"nfu\": \"Nothobranchius furzeri (turquoise killifish)\"}\n",
+    "tissueList = [\"brain\", \"liver\", \"skin\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "8fcb987c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getSampleAges(filename):\n",
-    "    res = {}\n",
-    "    with open(filename, \"r\") as file:\n",
-    "        data = file.read()\n",
-    "    bs_data = BeautifulSoup(data, 'xml') \n",
-    "    samples = bs_data.find_all('Sample') \n",
-    "    for sample in samples:\n",
-    "        identifier = str(sample.find('Title').string).strip()\n",
-    "        ages = sample.find('Characteristics', {'tag': 'age'})\n",
-    "        res[identifier]=str(ages.string).strip()\n",
-    "    return res"
+    "organism=\"nfu\"\n",
+    "tissue=\"skin\"\n",
+    "\n",
+    "def getDeregulationMap(organism, tissues):\n",
+    "    \"\"\"\n",
+    "        Get deregulation map for a given organism (e.g., \"mmu\") and a specific tissue (e.g., \"skin\") or list\n",
+    "        of tissues.\n",
+    "        The map has reactions as keys (e.g., R00103) and its values are a sequence of lists (all of the same size); \n",
+    "        each list contains the deregulation values at specific ages.\n",
+    "    \"\"\"\n",
+    "    der_map = {}\n",
+    "    if type(tissues) is not list:\n",
+    "        tissues = [tissues]\n",
+    "    for tissue in tissues:\n",
+    "        with open(os.path.join(deregulationDir,f\"{organism}_RPKM_{tissue}_00010_Normalized.txt\")) as f:\n",
+    "            reader = csv.reader(f, delimiter=\"\\t\")\n",
+    "            for line in reader:\n",
+    "                reaction = \"rn\" + line[0][3:9]   # Duplicate reactions are kept with duplicate names\n",
+    "                values = [float(t) for t in line[3:]]\n",
+    "                if reaction not in der_map:\n",
+    "                    der_map[reaction] = []\n",
+    "                der_map[reaction] += [values]\n",
+    "    return der_map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "848ab309",
+   "execution_count": 37,
+   "id": "e99b4807",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_ages = getSampleAges(\"../../LaTeX/Data/KEGG-Pathways/AgeDeregulation/mmu_1.xml\")"
+    "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([os.path.join(dataDirectory, organism, f\"{organism}00010-sbml.xml\")])\n",
+    "G, dd = hg2g(H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1d9c2b79",
+   "execution_count": 39,
+   "id": "1bbe3bda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getGeneCount(filename, sheet_name, sample_column_names, gene_id_column):\n",
-    "    df = pd.read_excel(filename, sheet_name = sheet_name)\n",
-    "    df.rename(columns = {x: x.strip() for x in df.columns}, inplace=True)\n",
-    "    gene_ids = df.loc[:, gene_id_column]\n",
-    "    return gene_ids, {sample_column_name: df.loc[:, sample_column_name] \n",
-    "            for sample_column_name in sample_column_names\n",
-    "            if sample_column_name in df.columns},\n",
-    "        "
+    "centrality=nx.betweenness_centrality(G)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "527c5e2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gn, df = getGeneCount(\"../../LaTeX/Data/KEGG-Pathways/AgeDeregulation/mmu_0.xls\", \"counts\",  sample_ages.keys(), \"external_gene_id\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d0154c94",
+   "execution_count": 48,
+   "id": "a1136b62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0              Gnai3\n",
-       "1               Pbsn\n",
-       "2              Cdc45\n",
-       "3                H19\n",
-       "4              Scml2\n",
-       "            ...     \n",
-       "37310     AC158600.6\n",
-       "37311    AC169674.49\n",
-       "37312     AC116875.1\n",
-       "37313         Gm2964\n",
-       "37314     AC158220.1\n",
-       "Name: external_gene_id, Length: 37315, dtype: object"
+       "0.08718354430379747"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gn"
+    "np.average([centrality[k] for k in sr2r if sr2r[k]==\"rnR00658\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "fa28d67d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "der_map = getDeregulationMap(\"nfu\", \"skin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "a2e30fc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average_deregulation(sr2r, centrality, der_map):\n",
+    "    \"\"\"\n",
+    "        For a given sr2r map (map from subreaction names to reactions, e.g., 'rnR00710_R' -> 'rnR00710'),\n",
+    "        centrality (dictionary from reactions to centrality values), deregulation map (as returned by getDeregulationMap)\n",
+    "        produce the average centrality * deregulation for each time point.\n",
+    "    \"\"\"\n",
+    "    n_age_points = len(der_map[next(iter(der_map))][0])\n",
+    "    t = np.array([0.0] * n_age_points)\n",
+    "    count = 0\n",
+    "    for k, listvalues in der_map.items():\n",
+    "        centr = np.average([centrality[kk] for kk in sr2r if sr2r[kk]==k]) # Centrality of reaction\n",
+    "        if np.isnan(centr):\n",
+    "            continue\n",
+    "        dereg = [np.average([v[i] for v in listvalues]) for i in range(n_age_points)] # Deregulation values (one for each age)\n",
+    "        s = centr*np.array(dereg)\n",
+    "        count += 1\n",
+    "        t += s\n",
+    "    return t/count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "16c2fd9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mus musculus (house mouse)              \t[13.88287034 13.48423308 14.55791181 13.98416059 13.8065526 ]\n",
+      "Danio rerio (zebrafish)                 \t[ 9.78108459  9.99116108 10.49646622  9.73770804  9.0851725 ]\n",
+      "Nothobranchius furzeri (turquoise killif\t[8.55653031 8.37344154 8.33470044 7.58287193 7.97215917]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for organism, organism_name in organismDict.items():\n",
+    "    H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([os.path.join(dataDirectory, organism, f\"{organism}00010-sbml.xml\")])\n",
+    "    G, dd = hg2g(H)\n",
+    "    centrality = nx.betweenness_centrality(G)\n",
+    "    avgd = average_deregulation(sr2r, centrality, getDeregulationMap(organism, \"brain\"))\n",
+    "    print(f\"{organism_name:40.40}\\t{avgd}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e99b4807",
+   "id": "5410dd0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -136,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
