Rimesso a posto nome

--- a/src/work-NafisNothobranchiusFurzieri.ipynb
+++ b/src/work-NafisNothobranchiusFurzieri.ipynb
@@ -147,7 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organismDict = {\"mmu\": \"Mus musculus (house mouse)\", \"dre\": \"Danio rerio (zebrafish)\", \"nfu\": \"Nothobranchius furzeri (turquoise killifish)\"}"
+    "organismDict = {\"mmu\": \"Mus musculus (house mouse)\", \"dre\": \"Danio rerio (zebrafish)\", \"nfu\": \"Nothobranchius furzeri (turquoise killifish)\"}\n",
+    "#organismDict = {\"ko\": \"All organisms\"}"
    ]
   },
   {
@@ -170,33 +171,16 @@
    "source": [
     "table = pd.DataFrame(columns=organismDict.values())\n",
     "for superpathway in superpathwayDict.keys():\n",
-    "    table.loc[superpathway] = [0.0] * 3\n",
+    "    table.loc[superpathway] = [0.0] * 1\n",
     "table.loc[\"AVERAGE\"] = 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "8fcb987c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'e' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 9\u001b[0m\n\u001b[1;32m      8\u001b[0m dd, sr2r, r2ss, rid2rname, mid2mname \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[0;32m----> 9\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mnafis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdd\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m table\u001b[38;5;241m.\u001b[39mloc[superpathway]\u001b[38;5;241m.\u001b[39mloc[organismName] \u001b[38;5;241m=\u001b[39m x\n",
-      "File \u001b[0;32m~/svn/Lavori/HyperFibrations/qf/src/kegg.py:139\u001b[0m, in \u001b[0;36mnafis\u001b[0;34m(d)\u001b[0m\n\u001b[1;32m    138\u001b[0m classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(d\u001b[38;5;241m.\u001b[39mvalues()))\n\u001b[0;32m--> 139\u001b[0m afiber \u001b[38;5;241m=\u001b[39m n \u001b[38;5;241m/\u001b[39m \u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mclasses\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m afiber \u001b[38;5;241m/\u001b[39m (n \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m (n \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m             avg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m x\n\u001b[1;32m     12\u001b[0m             n \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m---> 13\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[43me\u001b[49m:\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m     15\u001b[0m table\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAVERAGE\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mloc[organismName] \u001b[38;5;241m=\u001b[39m avg \u001b[38;5;241m/\u001b[39m n\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'e' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for organism, organismName in organismDict.items():\n",
     "    avg = 0\n",
@@ -210,31 +194,125 @@
     "                table.loc[superpathway].loc[organismName] = x\n",
     "                avg += x\n",
     "                n += 1\n",
-    "        except e:\n",
+    "        except:\n",
     "            pass\n",
     "    table.loc[\"AVERAGE\"].loc[organismName] = avg / n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1ba22d51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>All organisms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Carbohydrate metabolism</th>\n",
+       "      <td>0.000412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Energy metabolism</th>\n",
+       "      <td>0.007329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lipid metabolism</th>\n",
+       "      <td>0.000639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nucleotide metabolism</th>\n",
+       "      <td>0.001294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Amino acid metabolism</th>\n",
+       "      <td>0.000528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metabolism of other amino acids</th>\n",
+       "      <td>0.001668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Glycan biosynthesis and metabolism</th>\n",
+       "      <td>0.001851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metabolism of cofactors and vitamins</th>\n",
+       "      <td>0.000767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metabolism of terpenoids and polyketides</th>\n",
+       "      <td>0.005132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Biosynthesis of other secondary metabolites</th>\n",
+       "      <td>0.002125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Xenobiotics biodegradation and metabolism</th>\n",
+       "      <td>0.010291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVERAGE</th>\n",
+       "      <td>0.002912</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             All organisms\n",
+       "Carbohydrate metabolism                           0.000412\n",
+       "Energy metabolism                                 0.007329\n",
+       "Lipid metabolism                                  0.000639\n",
+       "Nucleotide metabolism                             0.001294\n",
+       "Amino acid metabolism                             0.000528\n",
+       "Metabolism of other amino acids                   0.001668\n",
+       "Glycan biosynthesis and metabolism                0.001851\n",
+       "Metabolism of cofactors and vitamins              0.000767\n",
+       "Metabolism of terpenoids and polyketides          0.005132\n",
+       "Biosynthesis of other secondary metabolites       0.002125\n",
+       "Xenobiotics biodegradation and metabolism         0.010291\n",
+       "AVERAGE                                           0.002912"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "table"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ee49e2d8",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c84f13ce",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be9a7192",
-   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -254,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
