--- a/src/work-NothobranchiusFurzieri.ipynb
+++ b/src/work-NothobranchiusFurzieri.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "d4364c55",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "fa19c64c",
    "metadata": {},
    "outputs": [],
@@ -140,17 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "35f00122",
    "metadata": {},
    "outputs": [],
    "source": [
-    "organismDict = {\"mmu\": \"Mus musculus (house mouse)\", \"dre\": \"Danio rerio (zebrafish)\", \"nfu\": \"Nothobranchius furzeri (turquoise killifish)\"}"
+    "organismDict = {\"mmu\": \"Mus musculus (house mouse)\", \"dre\": \"Danio rerio (zebrafish)\", \"nfu\": \"Nothobranchius furzeri (turquoise killifish)\"}\n",
+    "#organismDict = {\"ko\": \"All organisms\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "1b4206df",
    "metadata": {},
    "outputs": [],
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b9885cb5",
    "metadata": {},
    "outputs": [
@@ -169,7 +170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/boldi/.local/share/virtualenvs/qf-BIT_cIX4/lib/python3.8/site-packages/hypernetx/classes/hypergraph.py:968: UserWarning: Cannot add edge. Edge already in hypergraph\n",
+      "/Users/boldi/.local/share/virtualenvs/qf-ZyPGaJ2v/lib/python3.9/site-packages/hypernetx/classes/hypergraph.py:968: UserWarning: Cannot add edge. Edge already in hypergraph\n",
       "  warnings.warn(\"Cannot add edge. Edge already in hypergraph\")\n"
      ]
     }
@@ -257,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
