Now one can try without colors

--- a/src/work-NothobranchiusFurzieri.ipynb
+++ b/src/work-NothobranchiusFurzieri.ipynb
@@ -145,44 +145,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organismDict = {\"mmu\": \"Mus musculus (house mouse)\", \"dre\": \"Danio rerio (zebrafish)\", \"nfu\": \"Nothobranchius furzeri (turquoise killifish)\"}\n",
-    "#organismDict = {\"ko\": \"All organisms\"}"
+    "#organismDict = {\"mmu\": \"Mus musculus (house mouse)\", \"dre\": \"Danio rerio (zebrafish)\", \"nfu\": \"Nothobranchius furzeri (turquoise killifish)\"}\n",
+    "organismDict = {\"ko\": \"All organisms\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "1b4206df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputDirectory = \"/Users/boldi/Desktop/pw/\"\n",
-    "dataDirectory = \"../../LaTeX/Data/KEGG-Pathways/\""
+    "outputDirectory = \"/Users/boldi/Desktop/pw-nocolor/\"\n",
+    "dataDirectory = \"../../LaTeX/Data/KEGG-Pathways/\"\n",
+    "useColors = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b9885cb5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/boldi/.local/share/virtualenvs/qf-ZyPGaJ2v/lib/python3.9/site-packages/hypernetx/classes/hypergraph.py:968: UserWarning: Cannot add edge. Edge already in hypergraph\n",
-      "  warnings.warn(\"Cannot add edge. Edge already in hypergraph\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for organism in organismDict.keys():\n",
     "    for superpathway in superpathwayDict.keys():\n",
     "        safeSuperpathway = makesafe(superpathway)\n",
     "        H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML(\n",
     "            [os.path.join(dataDirectory, organism, f\"{organism}{x[0]}-sbml.xml\") for x in superpathwayDict[superpathway]])\n",
-    "        dd=hyper_cardon_crochemore(H, proxy=sr2r)\n",
-    "        \n",
+    "        if useColors:\n",
+    "            dd=hyper_cardon_crochemore(H, proxy=sr2r)\n",
+    "        else:\n",
+    "            G, unused = hg2g(H)\n",
+    "            dd = qf.cc.cardon_crochemore(G)\n",
     "        groupedReactions = mapKeys(dd, prefOnly=\"rn\")\n",
     "        r2gr = {}\n",
     "        r2grall = {}\n",
