--- a/src/work-dereg.ipynb
+++ b/src/work-dereg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d4364c55",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "1146bfd1",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "8fcb987c",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "e99b4807",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "1bbe3bda",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "a1136b62",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "0.08718354430379747"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "fa28d67d",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "a2e30fc6",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "16c2fd9e",
    "metadata": {},
    "outputs": [
@@ -147,9 +147,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mus musculus (house mouse)              \t[13.88287034 13.48423308 14.55791181 13.98416059 13.8065526 ]\n",
-      "Danio rerio (zebrafish)                 \t[ 9.78108459  9.99116108 10.49646622  9.73770804  9.0851725 ]\n",
-      "Nothobranchius furzeri (turquoise killif\t[8.55653031 8.37344154 8.33470044 7.58287193 7.97215917]\n"
+      "Mus musculus (house mouse)              \t[ 9.60245506 13.91204842 12.0661237  12.3222441  15.50324239]\n",
+      "Danio rerio (zebrafish)                 \t[13.20834487 11.86491902  6.79733883  5.18971128  6.65130449]\n",
+      "Nothobranchius furzeri (turquoise killif\t[ 7.40079422  8.61049092 17.68870591 10.25709883  9.94354928]\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
     "    H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([os.path.join(dataDirectory, organism, f\"{organism}00010-sbml.xml\")])\n",
     "    G, dd = hg2g(H)\n",
     "    centrality = nx.betweenness_centrality(G)\n",
-    "    avgd = average_deregulation(sr2r, centrality, getDeregulationMap(organism, \"brain\"))\n",
+    "    avgd = average_deregulation(sr2r, centrality, getDeregulationMap(organism, \"skin\"))\n",
     "    print(f\"{organism_name:40.40}\\t{avgd}\")"
    ]
   },
